Add Swagger Docs to UsersController
* used JsonAPI helpers
